<resources>
    <string name="app_name">WaterScorer</string>
    <string name="team_name">Enter Team Name</string>
    <string name="team_a">TeamA</string>
    <string name="team_b">TeamB</string>
    <string name="button_start">Start Match</string>
    <string name="score">0</string>
    <string name="goal_score">Goal</string>
    <string name="goal_unscore">-</string>
    <string name="fouls">Fouls:</string>
    <string name="make_foul">Foul</string>
    <string name="unmake_foul">-</string>
    <string name="end_match">End Match</string>
    <string name="restart_match">Restart</string>
    <string name="new_match">New Match</string>
</resources>
